--- a/ReconocimientoFacial/nbproject/private/private.properties
+++ b/ReconocimientoFacial/nbproject/private/private.properties
@@ -3,4 +3,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\Rub\u00e9n Gonz\u00e1lez V\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Virtual\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
